data/derived/comb/progs/unify/prog5277.ml.out
Characters 12-24:
  let c3 () = (11, 15, 43)
              ^^^^^^^^^^^^
Error: This expression has type int * int * int
       This is not a function; it cannot be applied.
